force-app/main/default/objects/Requisi_o_Interna__c/Requisi_o_Interna__c.object-meta.xml
<CustomObject>
    <label>Requisição Interna</label>
    <nameField>
        <displayFormat>REQ-{0000}</displayFormat>
        <label>N° da Requisição</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requisições Internas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>