force-app/main/default/objects/Requisi_o_Interna__c/fields/Algum_produto_da_TI__c.field-meta.xml
<CustomField>
    <fullName>Algum_produto_da_TI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Algum produto da TI?</label>
    <type>Checkbox</type>
</CustomField>