force-app/main/default/objects/Requisi_o_Interna__c/fields/Dados_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Dados_de_pagamento__c</fullName>
    <label>Dados de pagamento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>