force-app/main/default/objects/Requisi_o_Interna__c/fields/data_aprovacao_req__c.field-meta.xml
<CustomField>
    <fullName>data_aprovacao_req__c</fullName>
    <label>Data de aprovação da requisição</label>
    <type>DateTime</type>
</CustomField>