force-app/main/default/objects/Requisi_o_Interna__c/fields/Data_da_necessidade__c.field-meta.xml
<CustomField>
    <fullName>Data_da_necessidade__c</fullName>
    <label>Data da necessidade</label>
    <type>Date</type>
</CustomField>