force-app/main/default/objects/Requisi_o_Interna__c/fields/diasEmAberto__c.field-meta.xml
<CustomField>
    <fullName>diasEmAberto__c</fullName>
    <formula>CEILING(TODAY() - Data_da_aprova_o_da_requisi_o__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias em aberto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>