force-app/main/default/objects/Requisi_o_Interna__c/fields/Evento__c.field-meta.xml
<CustomField>
    <fullName>Evento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Requisições Internas</relationshipLabel>
    <relationshipName>Requisi_es_Internas</relationshipName>
    <type>Lookup</type>
</CustomField>