force-app/main/default/objects/Requisi_o_Interna__c/fields/Forma_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pagamento__c</fullName>
    <label>Forma de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boleto bancário</fullName>
            </value>
            <value>
                <fullName>Transferência</fullName>
            </value>
            <value>
                <fullName>Cartão de crédito</fullName>
            </value>
            <value>
                <fullName>Cartão de débito</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>