force-app/main/default/objects/Requisi_o_Interna__c/fields/Gestor__c.field-meta.xml
<CustomField>
    <fullName>Gestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requisi_es_Internas</relationshipName>
    <type>Lookup</type>
</CustomField>