force-app/main/default/objects/Requisi_o_Interna__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Válido somente Opp COMITED ou WIN</errorMessage>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>COMITED</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>WIN</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Requisições Internas</relationshipLabel>
    <relationshipName>Requisi_es_Internas</relationshipName>
    <type>Lookup</type>
</CustomField>