force-app/main/default/objects/Requisi_o_Interna__c/fields/previsao_pc__c.field-meta.xml
<CustomField>
    <fullName>previsao_pc__c</fullName>
    <label>Previsão para gerar pedido de compra</label>
    <type>Date</type>
</CustomField>