force-app/main/default/objects/Requisi_o_Interna__c/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <label>Prioridade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NORMAL</fullName>
            </value>
            <value>
                <fullName>EMERGENCIAL</fullName>
            </value>
            <value>
                <fullName>REGULARIZAÇÃO</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
                <isActive>false</isActive>
                <label>Alta</label>
            </value>
            <value>
                <fullName>Baixa</fullName>
                <isActive>false</isActive>
                <label>Baixa</label>
            </value>
            <value>
                <fullName>Média</fullName>
                <isActive>false</isActive>
                <label>Média</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>