force-app/main/default/objects/Requisi_o_Interna__c/fields/Total_de_Itens__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Itens__c</fullName>
    <label>Total de Itens</label>
    <summarizedField>Item_Requerido__c.Quantidade__c</summarizedField>
    <summaryFilterItems>
        <field>Item_Requerido__c.Status_do_Item__c</field>
        <operation>notEqual</operation>
        <value>CANCELADO</value>
    </summaryFilterItems>
    <summaryForeignKey>Item_Requerido__c.Requisi_o_Interna_Relacionada__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>