force-app/main/default/objects/Requisi_o_Interna__c/fields/Totaliza_o__c.field-meta.xml
<CustomField>
    <fullName>Totaliza_o__c</fullName>
    <formula>Valor_Total_da_Requisi_o__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totalização</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>