force-app/main/default/objects/Requisi_o_Interna__c/fields/Valor_Total_da_Requisi_o__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_da_Requisi_o__c</fullName>
    <label>Valor Total da Requisição</label>
    <summarizedField>Item_Requerido__c.Valor_de_Compra__c</summarizedField>
    <summaryForeignKey>Item_Requerido__c.Requisi_o_Interna_Relacionada__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>