force-app/main/default/objects/Requisi_o_Interna__c/validationRules/Bloqueia_previsao_para_gerar_PC_NOVO.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueia_previsao_para_gerar_PC_NOVO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    !$User.Ignorar_erros__c,
    $User.ProfileId != &apos;00eU40000008oAv&apos;,
    $User.ProfileId != &apos;00e6e000002FEQZ&apos;,
    $User.ProfileId != &apos;00e6e000002FEQZ&apos;,
    NOT(ISBLANK(previsao_pc__c))
)</errorConditionFormula>
    <errorMessage>O campo Previsão Para Gerar Pedido de Compra só pode ser preenchido pelo time de Compras.</errorMessage>
</ValidationRule>