force-app/main/default/objects/Requisi_o_Interna__c/validationRules/Justificativa.validationRule-meta.xml
<ValidationRule>
    <fullName>Justificativa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISNEW(),ISCHANGED(Prioridade__c)),
TEXT(Prioridade__c) == &apos;REGULARIZAÇÃO&apos;,
Justificativa__c == &apos;&apos;
)</errorConditionFormula>
    <errorDisplayField>Justificativa__c</errorDisplayField>
    <errorMessage>Insira uma justificativa para a solicitação de regularização.</errorMessage>
</ValidationRule>