force-app/main/default/objects/Requisi_o_Interna__c/validationRules/Oportunidade_diferente_de_Comited.validationRule-meta.xml
<ValidationRule>
    <fullName>Oportunidade_diferente_de_Comited</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISNEW(),
  NOT(ISBLANK(Oportunidade__c)),
  NOT(ISPICKVAL(Oportunidade__r.StageName, &quot;COMITED&quot;))
)</errorConditionFormula>
    <errorDisplayField>Oportunidade__c</errorDisplayField>
    <errorMessage>❌ Só é permitido criar um Requisição de Compra quando a oportunidade estiver no estágio &quot;COMITED&quot;.</errorMessage>
</ValidationRule>