force-app/main/default/objects/Requisi_o_Interna__c/validationRules/Oportunidade_diferente_de_compra_atendip.validationRule-meta.xml
<ValidationRule>
    <fullName>Oportunidade_diferente_de_compra_atendip</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISNEW(),
NOT(ISBLANK(Oportunidade__c)),
  Oportunidade__r.Recomenda_se_compra_antecipada__c = false
)</errorConditionFormula>
    <errorDisplayField>Oportunidade__c</errorDisplayField>
    <errorMessage>❌ Não é permitido criar uma nova Requisição de Compra quando a oportunidade não recomenda compra antecipada.</errorMessage>
</ValidationRule>