force-app/main/default/objects/Requisi_o_Interna__c/validationRules/Status_novo.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_novo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
TEXT(Status_da_Requisi_o__c) != &apos;Novo&apos;
)</errorConditionFormula>
    <errorDisplayField>Status_da_Requisi_o__c</errorDisplayField>
    <errorMessage>A requisição deve ser criada com Status &quot;Novo&quot;. Após inserir os itens, envie para aprovação.</errorMessage>
</ValidationRule>