force-app/main/default/objects/Requisi_o_Interna__c/validationRules/Tipo_de_requisicao_para_opp_igual_a_impo.validationRule-meta.xml
<ValidationRule>
    <fullName>Tipo_de_requisicao_para_opp_igual_a_impo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISNEW(),
  NOT(ISBLANK(Oportunidade__c)),
  NOT(ISPICKVAL(Tipo_de_Requisi_o__c, &quot;Importação&quot;)),
  Oportunidade__c != null
)</errorConditionFormula>
    <errorDisplayField>Tipo_de_Requisi_o__c</errorDisplayField>
    <errorMessage>❌ Só é permitido criar uma Requisição de Compra vinculada a uma Oportunidade quando o tipo de requisilção for &quot;Importação&quot;.</errorMessage>
</ValidationRule>