force-app/main/default/objects/Requisi_o_Interna__c/listViews/Finalizadas.listView-meta.xml
<ListView>
    <fullName>Finalizadas</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Prioridade__c</columns>
    <columns>Status_da_Requisi_o__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_da_Requisi_o__c</field>
        <operation>equals</operation>
        <value>Finalizado</value>
    </filters>
    <label>Finalizadas</label>
</ListView>