force-app/main/default/objects/Requisi_o_Interna__c/listViews/Minhas_requisi_es.listView-meta.xml
<ListView>
    <fullName>Minhas_requisi_es</fullName>
    <columns>NAME</columns>
    <columns>Tipo_de_Requisi_o__c</columns>
    <columns>Valor_Total_da_Requisi_o__c</columns>
    <columns>Categoria__c</columns>
    <columns>Status_da_Requisi_o__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Minhas requisições</label>
</ListView>